fix alignment of discription section

--- a/src/app/description-section/description-section.component.scss
+++ b/src/app/description-section/description-section.component.scss
@@ -17,6 +17,7 @@
   border: 1px solid black;
   border-radius: 20px;
   background-color: aliceblue;
+  margin: 25px 25px 0px 0px;
 }
 
 .description-img img {
